--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -3,8 +3,8 @@
   <h2 class="m-0" mat-dialog-title>{{(data.idStudent ? 'EDIT_STUDENT' : 'ADD_STUDENT') | translate}}</h2>
 
   <!-- Sign Out -->
-  <button mat-icon-button mat-dialog-close attr.aria-label="{{'CANCEL' | translate}}">
-    <fa-icon class="mat-icon-24 mat-hint" icon="times"></fa-icon>
+  <button class="button-close" mat-icon-button mat-dialog-close attr.aria-label="{{'CANCEL' | translate}}">
+    <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
   </button>
 </div>
 
@@ -58,45 +58,61 @@
           </mat-select>
           <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="school"></fa-icon>
         </mat-form-field>
+
+        <!-- Details -->
+        <mat-form-field appearance="outline" fxFlex="65">
+          <mat-label>{{'FORM.OBSERVATIONS' | translate}}</mat-label>
+          <textarea matInput formControlName="studentObservationsCtrl" rows="4"></textarea>
+          <!-- <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="file-alt"></fa-icon> -->
+          <mat-hint align="start">{{'HINT.OBSERVATIONS' | translate}}</mat-hint>
+        </mat-form-field>
       </div>
     </div>
 
-    <h3 class="mat-h2 mat-hint">{{'STUDENT_PARENTS_DATA' | translate}}</h3>
+    <h3 class="mat-h2 mat-hint">{{'CONTACT.TITLE' | translate}}</h3>
 
-    <div class="mb-2 mt-1 f-wrap" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+    <div class="mb-2 mt-1" formGroupName="contactInformation">
 
-      <!-- Father's name -->
-      <mat-form-field appearance="outline" fxFlex="65">
-        <mat-label>{{'FORM.FATHERS_NAME' | translate}}</mat-label>
-        <input matInput formControlName="fatherNameCtrl" attr.aria-label="{{'FORM.FATHERS_NAME' | translate}}"
-          autocomplete="off">
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="user"></fa-icon>
-      </mat-form-field>
+      <!-- Phones -->
+      <div class="phone-list" *ngIf="arrayPhones.controls" formArrayName="phones">
+        <div *ngFor="let phone of arrayPhones.controls; let i = index" fxLayout="row"
+          fxLayoutAlign="space-between center">
 
-      <!-- Father's phone -->
-      <mat-form-field appearance="outline" fxFlex="35">
-        <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
-        <input matInput formControlName="fatherPhoneCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
-          autocomplete="off">
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="phone-alt"></fa-icon>
-      </mat-form-field>
+          <ng-container formGroupName="{{i}}">
 
-      <!-- Mother's name -->
-      <mat-form-field appearance="outline" fxFlex="65">
-        <mat-label>{{'FORM.MOTHERS_NAME' | translate}}</mat-label>
-        <input matInput formControlName="motherNameCtrl" attr.aria-label="{{'FORM.MOTHERS_NAME' | translate}}"
-          autocomplete="off">
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="user"></fa-icon>
-      </mat-form-field>
+            <!-- Name -->
+            <mat-form-field fxFlex="45" appearance="outline">
+              <mat-label>{{'FORM.NAME' | translate}}</mat-label>
+              <input matInput formControlName="contactPhoneNameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}"
+                maxlength="20" autocomplete="off">
+              <!-- <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="user"></fa-icon> -->
+            </mat-form-field>
 
-      <!-- Mother's phone -->
-      <mat-form-field appearance="outline" fxFlex="35">
-        <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
-        <input matInput formControlName="motherPhoneCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
-          autocomplete="off">
-        <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="phone-alt"></fa-icon>
-      </mat-form-field>
+            <!-- Phone -->
+            <mat-form-field fxFlex="45" appearance="outline">
+              <mat-label>{{'FORM.PHONE' | translate}}</mat-label>
+              <input matInput formControlName="contactPhoneNumberCtrl" attr.aria-label="{{'FORM.PHONE' | translate}}"
+                autocomplete="off">
+              <!-- <fa-icon matPrefix class="mat-icon-18 mat-hint pr-1" icon="phone-alt"></fa-icon> -->
+            </mat-form-field>
 
+            <!-- Delete phone -->
+            <button mat-icon-button color="warn" class="mb-1" attr.aria-label="{{'DELETE' | translate}}"
+              (click)="removePhone(i)">
+              <fa-icon class="mat-icon-18" icon="trash"></fa-icon>
+            </button>
+          </ng-container>
+        </div>
+      </div>
+
+      <!-- New phone -->
+      <div class="pl-q pr-q" fxLayout="row" fxLayoutAlign="end center">
+        <button class="button-text-icon" mat-stroked-button attr.arial-label="{{'DELETE' | translate}}"
+          (click)="addPhone(null, true)" [disabled]="arrayPhones.invalid">
+          <span class="text-button mat-hint mr-1">{{'HINT.ADD_NEW_PHONE' | translate}}</span>
+          <fa-icon class="mat-icon-18" icon="plus"></fa-icon>
+        </button>
+      </div>
     </div>
 
     <h3 class="mat-h2 mat-hint">{{'STUDENT_CONSERVATORY_DATA' | translate}}</h3>
