--- a/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
+++ b/src/app/classroom/student-profile/components/student-profile/student-profile.component.html
@@ -7,7 +7,7 @@
 
       <!-- Avatar -->
       <a flex="grow" matRipple class="avatar border-theme">
-        <img class="avatar-image" [src]="srcImage({img: student?.avatar})" alt="{{student?.avatar}}">
+        <img class="avatar-image" [src]="srcImage({img: student?.personal.avatar})" alt="{{student?.personal.avatar}}">
       </a>
 
       <!-- Student information -->
@@ -15,14 +15,14 @@
 
         <!-- Number info -->
         <div fxLayout="row" fxLayoutGap="1rem">
-          <div *ngIf="student?.birthdate" class="mat-small">
-            <span class="mb-0">{{student?.birthdate | age}}</span>
+          <div *ngIf="student?.personal?.birthdate" class="mat-small">
+            <span class="mb-0">{{student?.personal?.birthdate | age}}</span>
             <span class="mat-hint"> {{'YEARS' | translate}}</span>
           </div>
-          <div *ngIf="student?.academicCourse" class="mat-small">
-            <span class="mb-0">{{student?.academicCourse?.viewValue}}</span>
+          <div *ngIf="student?.personal?.academicCourse" class="mat-small">
+            <span class="mb-0">{{student?.personal?.academicCourse?.viewValue}}</span>
             <span class="mat-hint">
-              {{student?.academicCourse?.id | group: academicCourseList | translate | lowercase}}</span>
+              {{student?.personal?.academicCourse?.id | group: academicCourseList | translate | lowercase}}</span>
           </div>
           <div *ngIf="student?.musical?.course" class="mat-small">
             <span class="mb-0">{{student?.musical?.course.viewValue}}</span>
@@ -32,7 +32,7 @@
         </div>
 
         <!-- Instrument -->
-        <div *ngIf="student?.musical?.teacher" class="mat-small">
+        <div *ngIf="student?.musical?.instrument" class="mat-small">
           <span class="mat-hint">
             {{'FORM.INSTRUMENT' | translate}}: </span>
           <span class="mb-0">{{'INSTRUMENT.' + student?.musical?.instrument?.viewValue | translate}}</span>
@@ -48,19 +48,19 @@
         <!-- Subjects -->
         <div class="mt-q mb-q" fxLayout="row wrap" fxLayoutAlign="start center">
           <div class="badge mat-hint"
-            *ngFor="let subject of student?.musical?.subjects; let i=index; let first = first">
+            *ngFor="let subject of student?.classroom?.subjects; let i=index; let first = first">
             <span>{{'SUBJECT.' + subject.viewValue | translate}}</span>
           </div>
         </div>
 
         <!-- More Info -->
-        <div *ngIf="student?.observations">
+        <div *ngIf="student?.personal?.observations">
 
           <!-- Observations -->
           <div *ngIf="moreInfoConfig.show" class="mat-small">
             <span class="mat-hint">
               {{'FORM.OBSERVATIONS' | translate}}: </span>
-            <span class="mb-0">{{student.observations}}</span>
+            <span class="mb-0">{{student?.personal?.observations}}</span>
           </div>
 
           <!-- More Info button-->
