--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -14,33 +14,42 @@
     </div>
 
     <!-- Menu -->
-    <mat-nav-list class="m-0 p-0 nav-list" *ngFor="let menu of menuItems; index as i">
-      <ng-container *ngFor="let item of menu">
-        <a mat-list-item (click)="onItemSelected(item)">
-          <fa-icon class="mat-hint" [icon]="item.icon"></fa-icon>
-          <span class="mat-hint pl-h ml-q">{{ item?.name | translate}}</span>
-          <span fxFlex></span>
-          <button mat-icon-button (click)="openMenu($event)">
-            <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
-          </button>
-          <fa-icon *ngIf="item.children && item.children.length"
-            [@indicatorRotate]="item.expanded ? 'expanded': 'collapsed'" class="mat-hint" icon="chevron-right">
-          </fa-icon>
-        </a>
-        <div *ngIf="item.expanded">
-          <ng-container *ngFor="let child of item.children">
-            <a mat-list-item (click)="onItemSelected(child)" [routerLink]="[ '/' + item?.url ]"
-              routerLinkActive="active" [ngClass]="{'expanded': child.expanded}">
-              <span class="mat-hint pl-h ml-q">{{child?.name | translate}}</span>
+    <div class="nav-list-container">
+      <mat-nav-list class="m-0 p-0 mb-1" *ngFor="let menu of menuItems; index as i">
+        <div class="lola">
+          <ng-container *ngFor="let item of menu">
+            <a mat-list-item (click)="onItemSelected(item)" [ngClass]="{'active': item.expanded}">
+              <fa-icon class="mat-hint" [icon]="item.icon"></fa-icon>
+              <span class="mat-hint pl-h ml-q">{{ item?.name | translate}}</span>
               <span fxFlex></span>
-              <button mat-icon-button (click)="openMenu($event)">
-                <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
+              <button mat-icon-button *ngIf="item.children && item.children.length"
+                [@indicatorRotate]="item.expanded ? 'expanded': 'collapsed'" (click)="createElement($event, item)">
+                <fa-icon class="mat-hint" icon="plus"></fa-icon>
               </button>
             </a>
+            <div *ngIf="item.expanded">
+              <ng-container *ngFor="let child of item.children">
+                <a mat-list-item (click)="onItemSelected(child)" [ngClass]="{'expanded': child.expanded}">
+                  <span class="mat-hint pl-1 ml-1">{{child?.name}}</span>
+                  <span fxFlex></span>
+                  <button mat-icon-button [matMenuTriggerFor]="menuOptionsId"
+                    attr.aria-label="{{'OPTION_MENU' | translate}}">
+                    <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
+                  </button>
+                </a>
+                <mat-menu #menuOptionsId="matMenu">
+                  <button *ngFor="let option of menuOptions" mat-menu-item
+                    (click)="openMenuOption($event, item, child, option)">
+                    <fa-icon class="mat-icon-16 mat-hint" [icon]="option.icon"></fa-icon>
+                    <span>{{option.name | translate}}</span>
+                  </button>
+                </mat-menu>
+              </ng-container>
+            </div>
           </ng-container>
         </div>
-      </ng-container>
-    </mat-nav-list>
+      </mat-nav-list>
+    </div>
 
     <!-- Configuration -->
     <mat-nav-list class="m-0 p-0">
