--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -2,13 +2,31 @@
   width: 100%;
   height: 100vh;
 
-  .nav-list {
-    flex: 1 0 auto;
-    min-height: auto;
+  .nav-list-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    mat-nav-list {
+      flex: 1 0 auto;
+      min-height: auto;
+
+      .lola {
+        max-height: calc(100vh - 118px - var(--main-header-size) * 3);
+        overflow-y: auto;
+      }
+
+    }
   }
 }
 
 a[mat-list-item].active span,
 a[mat-list-item].active fa-icon {
   color: var(--light-theme-primary)
+}
+
+.mat-menu-item fa-icon {
+  position: relative;
+  top: 1px;
+  margin-right: 10px;
 }
