--- a/src/app/classroom/students/components/student-creation/student-creation.component.html
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.html
@@ -1,8 +1,8 @@
-<div class="mb-2" fxLayout="row" fxLayoutAlign="space-between center">
+<div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
   <!-- Title -->
   <h2 class="m-0" mat-dialog-title>{{(data.idStudent ? 'EDIT_STUDENT' : 'ADD_STUDENT') | translate}}</h2>
 
-  <!-- Sign Out -->
+  <!-- Cloase dialog button -->
   <button class="button-close" mat-icon-button mat-dialog-close attr.aria-label="{{'CANCEL' | translate}}">
     <fa-icon class="mat-icon-22 mat-hint" icon="times"></fa-icon>
   </button>
@@ -14,7 +14,7 @@
 
     <!-- STUDENT -->
     <h3 class="mat-h2 mat-hint">{{'STUDENT_PERSONAL_DATA' | translate}}</h3>
-    <div formGroupName="personalFormGroup" class="mb-2 mt-1 f-wrap" fxLayout="row" fxLayout.xs="column"
+    <div formGroupName="personalFormGroup" class="mb-2 f-wrap" fxLayout="row" fxLayout.xs="column"
       fxLayoutAlign="start center">
 
       <!-- Avatar -->
@@ -31,13 +31,14 @@
           </mat-label>
           <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.NAME' | translate}}"
             autocomplete="off">
-          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="signature"></fa-icon>
+          <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
         </mat-form-field>
 
         <!-- Birthdate -->
         <mat-form-field class="mb-1" appearance="outline" fxFlex="35">
           <mat-label>{{'FORM.BIRTHDATE' | translate}}</mat-label>
-          <input class="pl-h" matInput formControlName="birthdateCtrl" [matDatepicker]="birthdatePicker" [max]="maxDate">
+          <input class="pl-h" matInput formControlName="birthdateCtrl" [matDatepicker]="birthdatePicker"
+            [max]="maxDate">
           <mat-datepicker #birthdatePicker></mat-datepicker>
           <mat-datepicker-toggle class="mat-hint" matPrefix [for]="birthdatePicker">
           </mat-datepicker-toggle>
@@ -45,7 +46,7 @@
         </mat-form-field>
 
         <!-- Academic course -->
-        <mat-form-field appearance="outline" fxFlex="65">
+        <mat-form-field class="mb-1" appearance="outline" fxFlex="65">
           <mat-label>{{'FORM.ACADEMIC_COURSE' | translate}}</mat-label>
           <mat-select formControlName="academicCourseCtrl" [compareWith]="equals"
             attr.aria-label="{{'FORM.ACADEMIC_COURSE' | translate}}">
@@ -60,7 +61,7 @@
         </mat-form-field>
 
         <!-- Details -->
-        <mat-form-field appearance="outline" fxFlex="65">
+        <mat-form-field appearance="outline" fxFlex="100">
           <mat-label>{{'FORM.OBSERVATIONS' | translate}}</mat-label>
           <textarea matInput formControlName="observationsCtrl" rows="4"></textarea>
           <!-- <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="file-alt"></fa-icon> -->
@@ -144,7 +145,7 @@
       </mat-form-field>
 
       <!-- Instrument -->
-      <mat-form-field appearance="outline" fxFlex="50">
+      <mat-form-field appearance="outline" fxFlex="100">
         <mat-label>{{'FORM.INSTRUMENT' | translate}}</mat-label>
         <mat-select formControlName="instrumentCtrl" [compareWith]="equals"
           attr.aria-label="{{'FORM.INSTRUMENT' | translate}}">
@@ -168,10 +169,9 @@
       <!-- Classroom -->
       <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
         <mat-label>{{'CLASSROOM' | translate}}</mat-label>
-        <mat-select formControlName="classroomIdCtrl" [compareWith]="equals" multiple
-          attr.aria-label="{{'CLASSROOM' | translate}}">
-          <mat-option *ngFor="let classroom of subjects" [value]="classroom">
-            {{classroom.viewValue}}
+        <mat-select formControlName="classroomIdCtrl" multiple attr.aria-label="{{'CLASSROOM' | translate}}">
+          <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
+            {{classroom.name}}
           </mat-option>
         </mat-select>
         <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="chalkboard"></fa-icon>
@@ -179,12 +179,12 @@
       </mat-form-field>
 
       <!-- Subjects -->
-      <mat-form-field appearance="outline" fxFlex="50">
+      <mat-form-field class="mb-1" appearance="outline" fxFlex="50">
         <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
         <mat-select formControlName="subjectsCtrl" [compareWith]="equals" multiple
           attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
-          <mat-option *ngFor="let subject of subjects" [value]="subject">
-            {{subject.viewValue}}
+          <mat-option *ngFor="let subject of subjectList" [value]="subject">
+            {{subject.name}}
           </mat-option>
         </mat-select>
         <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="book"></fa-icon>
