--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -29,7 +29,7 @@ $colors: (
   ),
   other: (
     border-color        : #8da3cf,
-    link-color          : darken($main-color, 10%)
+    link-color          : $main-color
   )
 );
 
