--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -36,9 +36,10 @@
   .badge {
     background-color: darken(map-get(map-get($colors, light-theme), background), 2%);
   }
-
+  
   .badge {
     color: #888;
+    border-color:  darken(map-get(map-get($colors, light-theme), background), 2%);
   }
 
   .mat-tab-group .mat-tab-header {
@@ -107,6 +108,7 @@
 
   .badge {
     color: #ccc;
+    border-color: #666;
   }
 
   // 424242
