Add day profile

--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -7,12 +7,12 @@
 
   <!-- Content -->
   <mat-sidenav-content id="main-content-container">
-    <div class="main-content" fxLayout="column">
+    <div class="main-content overflow-scroll-container" fxLayout="column">
       <!-- Header -->
       <a13-header></a13-header>
 
       <!-- Router -->
-      <main class="router-container">
+      <main class="overflow-scroll">
         <router-outlet></router-outlet>
       </main>
 
