--- a/src/app/classroom/components/day-delete-dialog/day-delete-dialog.component.html
+++ b/src/app/classroom/components/day-delete-dialog/day-delete-dialog.component.html
@@ -1,5 +1,5 @@
 <!-- Title -->
-<h2 mat-dialog-title>{{'DAY_DELETE' | translate}}</h2>
+<h2 mat-dialog-title>{{'DAY.DELETE' | translate}}</h2>
 
 <!-- Content -->
 <p class="mat-hint" mat-dialog-content>{{'MSG.DAY_DELETE' | translate}}</p>
