--- a/src/app/classroom/components/classroom/classroom.component.scss
+++ b/src/app/classroom/components/classroom/classroom.component.scss
@@ -1,6 +1,6 @@
 mat-sidenav.sidenav {
-  min-width: 280px;
-  max-width: 280px;
+  min-width: var(--main-sidemenu-size);
+  max-width: var(--main-sidemenu-size);
 }
 
 #main-content-container {
@@ -8,13 +8,5 @@ mat-sidenav.sidenav {
 }
 
 .main-content {
-  width: 100%;
-  height: 100%;
   padding-top: var(--main-header-size);
-  overflow: hidden;
-
-  .router-container {
-    flex: 1 0 auto;
-    min-height: auto;
-  }
 }
