--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -2,21 +2,8 @@
   width: 100%;
   height: 100vh;
 
-  .nav-list-container {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-
-    mat-nav-list {
-      flex: 1 0 auto;
-      min-height: auto;
-
-      .lola {
-        max-height: calc(100vh - 118px - var(--main-header-size) * 3);
-        overflow-y: auto;
-      }
-
-    }
+  .nav-list {
+    max-height: calc(100vh - 118px - var(--main-header-size) * 3);
   }
 }
 
