--- a/src/app/shared/components/day-creation/day-creation.component.html
+++ b/src/app/shared/components/day-creation/day-creation.component.html
@@ -1,6 +1,6 @@
 <div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
   <!-- Title -->
-  <h2 class="m-0" mat-dialog-title>{{(data.idDay ? 'EDIT_DAY' : 'ADD_DAY') | translate}}</h2>
+  <h2 class="m-0" mat-dialog-title>{{(data.idDay ? 'DAY.EDIT' : 'DAY.ADD') | translate}}</h2>
 
   <!-- Close dialog -->
   <button class="button-close" mat-icon-button mat-dialog-close attr.aria-label="{{'CANCEL' | translate}}">
@@ -22,15 +22,15 @@
           <mat-label>{{'FORM.STUDENT' | translate}}</mat-label>
           <div class="avatar-container mt-h" matPrefix>
             <img class="avatar avatar-xs p-0 mr-1"
-              [src]="srcImage({img: dayFormGroup?.value?.dayStudentCtrl?.personal?.avatar})" alt="Avatar">
+              [src]="srcImage({img: dayFormGroup?.controls?.dayStudentCtrl?.value?.personal?.avatar})" alt="Avatar">
           </div>
           <mat-select required formControlName="dayStudentCtrl" [compareWith]="equals"
             attr.aria-label="{{'FORM.STUDENT' | translate}}">
             <mat-option>-- {{'NONE' | translate}} --</mat-option>
             <mat-option *ngFor="let student of studentList" [value]="student">
               <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-                <img class="avatar avatar-xs p-0 mr-1" [src]="srcImage({img: student.personal?.avatar})" alt="Avatar">
-                <span>{{student.personal?.name}}</span>
+                <img class="avatar avatar-xs p-0 mr-1" [src]="srcImage({img: student?.personal?.avatar})" alt="Avatar">
+                <span>{{student?.personal?.name}}</span>
               </span>
             </mat-option>
           </mat-select>
@@ -58,7 +58,8 @@
 
         <!-- Content -->
         <div class="angular-editor mt-1 pt-h pb-h">
-          <ckeditor id="ckeditor" [editor]="ckeditor" [config]="editorConfig" formControlName="dayContentCtrl"></ckeditor>
+          <ckeditor id="ckeditor" [editor]="ckeditor" [config]="editorConfig" formControlName="dayContentCtrl">
+          </ckeditor>
         </div>
       </div>
     </div>
