--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -40,7 +40,8 @@ $sizes: (
     radius-size         : .5rem,
     header-size         : 54px,
     border-size         : 1px,
-    scroll-size         : 7px
+    scroll-size         : 7px,
+    sidemenu-size       : 280px
   )
 );
 
