Ripple bug Remove mat-card inside mat-card

--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -20,7 +20,7 @@
     <!-- Date -->
     <span class="mat-small mat-hint text-date">{{day?.date | date: 'd MMM, yy'}}</span>
   </div>
-  <mat-card-content class="day-container truncate-2">
+  <div class="day-container truncate-2">
     {{day?.content | stripHTML}}
-  </mat-card-content>
+  </div>
 </mat-card>
